2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (main): Remove TODO that referred to a pidfile_create.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (print_header): Remove.  Now out of use.
	(redirect_handler): Clarify freeing.
	(request_handler): Remove print_header iteration.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (get_file_size): Remove.  Out of use.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (serve_post): Cleanup doc a bit.
	(request_handler): Rename arg contenttype to content_type.  Cleanup doc a
	bit.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* doc/CMakeLists.txt (.build-html, .built-html_full): Remove duplicate
	rule.  Depend on all source files.

	* src/gsad.c, src/gsad_base.h, src/gsad_omp.c: Bring docs up to date.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Turn off recursive file search.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-create-note-form, html-edit-note-form)
	(html-create-override-form, html-create-note-form): Ensure override and
	note buttons are hidden.

2010-07-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-table): Add overrides to refresh URLs.

2010-07-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_system_reports_omp): Use new OMP for getting list.

	* src/html/omp.xsl (system_report [image]): Remove mode.  Change path.
	(system_report): Remove.
	(get_system_reports_response, get_system_reports): New template.  Rename
	from system_report.  Adjust path for flatter report type list.

2010-07-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/help.xsl (configure_agents.html): Updated help page on agents.

2010-07-13  Matthew Mundell <matthew.mundell@greenbone.net>
